--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,28 @@
 *.rar
 /Code_Zip
 Code_Zip.rar
+laravel_app/storage
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/storage/pail
+/vendor
+.env
+.env.backup
+.env.production
+.phpactor.json
+.phpunit.result.cache
+Homestead.json
+laravel_app/Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.nova
+/.vscode
+laravel_app/.zed
+laravel_app/vendor
